Replace JDBC witj JPA

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,3 +1,10 @@
+spring:
+  datasource:
+    username: postgres
+    password: postgres
+    url: jdbc:postgresql://localhost:5432/bank
+    driverClassName: org.postgresql.Driver
+
 registration:
   startBalance: 100
   defaultUsers:
@@ -7,9 +14,3 @@ registration:
     - username: user2
       password: asdasd
       balance: 100
-
-database:
-  driver: org.postgresql.Driver
-  url: jdbc:postgresql://localhost:5432/bank
-  username: postgres
-  password: postgres
