--- a/pom.xml
+++ b/pom.xml
@@ -53,6 +53,13 @@
             <artifactId>postgresql</artifactId>
             <version>42.2.10</version>
         </dependency>
+
+        <dependency>
+            <groupId>org.liquibase</groupId>
+            <artifactId>liquibase-core</artifactId>
+            <version>4.2.1</version>
+        </dependency>
+
     </dependencies>
 
     <build></build>
